--- a/Ex3/mystyle.css
+++ b/Ex3/mystyle.css
@@ -110,6 +110,10 @@ div.gallery:hover {
 
 .dropdown:hover .dropdown-content {
   display:block;
+  margin-top: 50px;
+    
+    text-shadow: 2px 2px 5px black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 .foot {
