--- a/Ex3/privacy.css
+++ b/Ex3/privacy.css
@@ -54,6 +54,10 @@
   
   .dropdown:hover .dropdown-content {
     display:block;
+    margin-top: 50px;
+    
+    text-shadow: 2px 2px 5px black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
 
 
